--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shoppingcart",
+  "name": "q",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -25,5 +25,9 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "^6.1.1",
     "vite": "^5.2.0"
-  }
+  },
+  "description": "",
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC"
 }
